# choose_energy_clarke

./: Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 19b999a5b5fc_generate_tables.py  1b6da3a88183_initial_migration.py  a1b9f15ec9e6_generate_tables.py  a47c3948ac8f_change_column_name_in_supplier.py  dc2c4d778926_generate_tables.py
app/: main.py
app/core/: base_exception.py  config.py  database.py
app/modules/suppliers/: enums.py  filters.py  model.py  models.py  repository.py  router.py  routes.py  schemas.py  service.py
app/shared/: dependencies.py  seed.py  utils.py
app/shared/interfaces/: __init__.py  supplier_repo.py
backend/: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 19b999a5b5fc_generate_tables.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/modules/suppliers/: enums.py  models.py  repository.py  schemas.py  service.py
backend/app/shared/: exceptions.py  utils.py
backend/app/shared/interfaces/: supplier_repo.py
backend/data/: database.db
backend/tests/suppliers/: test_service.py  test_service_unit.py
frontend/: .env  README.md  vite.config.ts
frontend/src/: index.css
frontend/src/components/ui/: Button.tsx  Input.tsx  Select.tsx
frontend/src/features/suppliers/components/: SupplierCard.tsx  (+3 more)
frontend/src/pages/: Home.tsx
frontend/src/services/: api.ts
frontend/src/utils/: constants.ts  formatters.ts
tests/: conftest.py
tests/suppliers/: test_service.py
(+2 files in other folders)
