[project]
name = "choose-energy-clarke"
version = "0.1.0"
description = "Desafio Clarke Energia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]
